--- a/SIMS.Web/Web.config
+++ b/SIMS.Web/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SIMS.Web-20161107103845.mdf;Initial Catalog=aspnet-SIMS.Web-20161107103845;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SIMSDbContext" connectionString="metadata=res://*/EntityDataModel.SIMSModel.csdl|res://*/EntityDataModel.SIMSModel.ssdl|res://*/EntityDataModel.SIMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=SIMS;persist security info=True;user id=sa;password=hu_xing_871215;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SIMS.Web-20161107103845.mdf;Initial Catalog=aspnet-SIMS.Web-20161107103845;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="SIMSDbContext" connectionString="metadata=res://*/EntityDataModel.SIMSModel.csdl|res://*/EntityDataModel.SIMSModel.ssdl|res://*/EntityDataModel.SIMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=SIMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
